Add AfterRegisterBotSubscriber bean and khoinda.bot.webhook.base-callback-path properties