@@ -110,7 +110,7 @@ public final class BotDispatcher {
         return getCommandRegistry().getAllCommands()
                 .stream()
                 .filter(botCommand -> this.hasPermission(update, botCommand))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @SneakyThrows
@@ -190,12 +190,12 @@ public final class BotDispatcher {
                         if (StringUtils.isNotBlank(e.getBodyDescription())) {
                             description.append(" [").append(e.getBodyDescription()).append("]");
                         }
-                        if (description.length() == 0) {
+                        if (description.isEmpty()) {
                             description.append(e.getCmd().replace(CommonConstant.CMD_PREFIX, ""));
                         }
                         return new org.telegram.telegrambots.meta.api.objects.commands.BotCommand(e.getCmd(), description.toString());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             setMyCommands = new SetMyCommands(commandList, new BotCommandScopeDefault(), null);
         }
         else {
